Revision history for Text-VimColor

{{$NEXT}}

0.25      2015-02-28T23:41:39Z

  - Add 'all_syntax_groups' option to enable additional syntax groups
    instead of just the primary ones.  Thanks Hinrik Örn Sigurðsson!

0.24      2014-04-13T18:16:06Z

  - Simplify encoding tests and mark a few as TODO
    while the library undergoes some refactoring.

0.23      2013-02-02T16:28:57Z

  - Attempt to do the right thing with character strings:
    Encode them in UTF-8, tell vim the file encoding (UTF-8),
    and return a (decoded) character string.
    Thanks to Ricardo Signes for the very helpful report (gh-1).

0.22      2012-10-29T23:36:29Z

  - The included 'text-vimcolor' script will attempt to load
    Win32::Console::ANSI on windows when printing ANSI to STDOUT
    in an attempt to make the output more useful.
  - Add a basic test to ensure the script still operates

0.21      2012-09-07T00:02:48Z

  - Add 'extra_vim_options' to be able to append options to the defaults

0.20      2012-08-11T02:05:18Z

  - Releasing as stable.

0.19-TRIAL 2012-07-28T03:44:54Z

  - Use IPC::Open3 for portability instead of doing fork/exec manually.
  - Various other fixes to attempt to make this usable on Windows.
    Thanks to Yasuhiro Matsumoto (mattn) for helping to port to Windows (gh-5).

0.18      2012-07-21T02:22:55Z

  [Bug Fix]
  - bin/text-vimcolor: Exit after printing usage when --help is specified
    (previous version continued to wait for STDIN).
    Thanks to Vyacheslav Matyukhin for the pull req (gh-6).

  [Installaion]
  - Try to show any available version information before aborting Makefile.PL

0.17      2012-03-22T02:49:27Z

  - Minor installation and test fixes for older systems

0.16      2012-03-21T17:38:45Z

  [Installation]
  - Simplify version detection using vim script

  [Testing]
  - Mark encoding tests as TODO tests for now (still under development)

0.15      2012-03-18T23:43:36Z

  [Performance]