@@ -9,8 +9,6 @@ copyright_year    = 2011
 [@Author::RWSTAUNER]
 ; declare prereqs used by inc/ even though they're currently all core modules
 AutoPrereqs.configure_finder = :IncModules
-; current default, but very important.  the lib/auto tree only exists to enable `prove -lv`
-GatherDir.follow_symlinks = 0
 GatherDir.exclude_match[0] = corpus/profile-vim/results
 Prepender.skip[0] = corpus/simple_test.pl
 
