@@ -4,6 +4,8 @@ use strict;
 use warnings;
 use Test::More;
 use Text::VimColor;
+use lib 't/lib';
+use TVC_Test;
 
 my %files =
   map { ($_ => Text::VimColor->dist_file($_)) }
