@@ -1,6 +1,8 @@
 use strict;
 use warnings;
 use Test::More;
+use lib 't/lib';
+use TVC_Test;
 use Text::VimColor;
 
 # windows prints everything when STDIN is tied, don't know why
