@@ -2,6 +2,8 @@ Revision history for Text-VimColor
 
 {{$NEXT}}
 
+  - Use Test::File::ShareDir to simplify testing.
+
 0.25      2015-02-28T23:41:39Z
 
   - Add 'all_syntax_groups' option to enable additional syntax groups
